src/assets/base.css
@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;700&family=Labrada:wght@400;700&display=swap');

:root {
  --color-primary: #6a4dc8;
  --color-primary-2: #289da1;
  --color-unique: #c54859;
  --color-unique-2: #f68c3b;
  --color-gray-lighter: #eeeef2;
  --color-gray-light: #ddd;
  --color-gray: #777;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: inherit;
}

body {
  min-height: 100vh;
  font-family: Labrada, serif;
  font-size: 1.125rem;
  line-height: 1.2;
}

a {
  text-decoration: none;
  color: var(--color-primary);
}

